[tool.poetry]
name = "hypermodern_python"
version = "0.1.0"
description = ""
authors = ["GoranBeast7 <hadzinikolovg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"


[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
wiki="hypermodern_python.wikipedia:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
